<resources>
    <string name="app_name">SC</string>
    <string name="iconImgDescription">Icon</string>
    <string name="title_activity_student_main">StudentMainActivity</string>

    <string name="title_home">Forum</string>
    <string name="title_dashboard">Class</string>
    <string name="title_notifications">Performance</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_student">StudentActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Type question...</string>

    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Forum</string>
    <string name="action_search">Search</string>
    <string name="title_class">Class</string>
    <string name="title_feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="slides">Feedback for Slides</string>
    <string name="lecture">Feedback for Lecturer</string>
    <string name="studentId">1000000</string>
    <string name="title_grades">Grades</string>
    <string name="classroomID">ClassroomID</string>

    <string name="classroomcount">ClassroomCount</string>
    <string name="classnames">classnames</string>
    <string name="counterQ">1</string>
    <string name="counterQuestion">0</string>
    <string name="no_available_question_now">No Available Question Now.</string>
    <string name="no_quiz_available">No Quiz Available.</string>
    <string name="slide_number">Slide Number</string>

</resources>
